--- a/dest/index.html
+++ b/dest/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>React router test</title>
   <!--<link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
